Fixed the profile design (large letters / text spacing).

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1020,7 +1020,7 @@ app-user-page h3
 /* Role Field Container */
 #roleElement
 	background: $boxesBackground
-	padding: 4px Calc((90% - 140px) / 2)
+	padding: 4px
 	text-align: center
 	width: 90%
 	margin: 10px
@@ -1041,15 +1041,15 @@ app-user-page h3
 
 /* Hugs Field Container */
 #rHugsElement
-	padding: 4px Calc((90% - 170px) / 2)
+	padding: 4px
 
 /* Hugs Field Container */
 #gHugsElement
-	padding: 4px Calc((90% - 140px) / 2)
+	padding: 4px
 
 /* Posts Field Container */
 #postsElement
-	padding: 4px Calc((90% - 155px) / 2)
+	padding: 4px
 
 /* Posts Field title */
 #postsElement .pageCategory
@@ -1060,6 +1060,7 @@ app-user-page h3
 	@include fontSize(14)
 	font-family: $mainFont
 	font-weight: bold
+	text-align: center
 	margin: 0 5px
 	color: $headlineColour
 	padding: 0 5px 10px
